Fix urls and some stupit syntex issue

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grunt-logger",
   "description": "Logging data for each Grunt deployment in files",
-  "version": "0.1.1",
-  "homepage": "https://github.com//Users/urielster/logger",
+  "version": "0.1.2",
+  "homepage": "https://github.com//Users/urielster/grunt-logger",
   "author": {
     "name": "urielster",
     "email": "uriel.elster@gmail.com",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com//Users/urielster/logger.git"
+    "url": "git://github.com//Users/urielster/grunt-logger.git"
   },
   "bugs": {
-    "url": "https://github.com//Users/urielster/logger/issues"
+    "url": "https://github.com//Users/urielster/grunt-logger/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com//Users/urielster/logger/blob/master/LICENSE-MIT"
+      "url": "https://github.com//Users/urielster/grunt-logger/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
@@ -38,6 +38,6 @@
     "grunt": "~0.4.1"
   },
   "keywords": [
-    "gruntplugin" , "logger","log"
+    "gruntplugin" , "logger","log"  , "grunt-logger"
   ]
 }
